shapely_edu_completed(before_cowork)

--- a/Public_transdata_test(230907~.ipynb
+++ b/Public_transdata_test(230907~.ipynb
@@ -2315,7 +2315,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "2e05c9a0-0a14-4e6b-858c-110da2277b55",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4050,7 +4052,12 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "31ed7453-f561-4ecf-9274-36e8d9333089",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
