Final_model_chaged(0922)_raw_data

--- a/ML_Feature_Engineering_2(gol_final_here0917).ipynb
+++ b/ML_Feature_Engineering_2(gol_final_here0917).ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "70f6e43e-4094-4315-90a3-4cac341e2aab",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d9cb9d2f-7ebd-4706-a1af-e03ef3d2b076",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "d3e5e1f7-40c2-4801-ab77-ce2b6ba6e850",
    "metadata": {
     "scrolled": true
@@ -218,69 +218,383 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "4ffe3abf-0810-4753-ba11-f00b2cbac048",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2472 entries, 0 to 2471\n",
-      "Data columns (total 47 columns):\n",
-      " #   Column                  Non-Null Count  Dtype  \n",
-      "---  ------                  --------------  -----  \n",
-      " 0   매출                      2472 non-null   float64\n",
-      " 1   기준_년_코드                 2472 non-null   int64  \n",
-      " 2   상권_구분_코드_명              2472 non-null   object \n",
-      " 3   상권_코드                   2472 non-null   int64  \n",
-      " 4   상권_코드_명                 2472 non-null   object \n",
-      " 5   점포수                     2472 non-null   int64  \n",
-      " 6   시간대1                    2472 non-null   int64  \n",
-      " 7   시간대2                    2472 non-null   int64  \n",
-      " 8   시간대3                    2472 non-null   int64  \n",
-      " 9   시간대4                    2472 non-null   int64  \n",
-      " 10  시간대5                    2472 non-null   int64  \n",
-      " 11  분기_1                    2472 non-null   int64  \n",
-      " 12  분기_2                    2472 non-null   int64  \n",
-      " 13  분기_3                    2472 non-null   int64  \n",
-      " 14  총 상주인구 수                2472 non-null   int64  \n",
-      " 15  총 가구 수                  2472 non-null   int64  \n",
-      " 16  총_직장인구_수                2472 non-null   int64  \n",
-      " 17  아파트_단지_수                2472 non-null   int64  \n",
-      " 18  총_생활인구_수                2472 non-null   int64  \n",
-      " 19  시간대_생활인구_수              2472 non-null   int64  \n",
-      " 20  집객시설_수                  2472 non-null   int64  \n",
-      " 21  관공서_수                   2472 non-null   int64  \n",
-      " 22  은행_수                    2472 non-null   int64  \n",
-      " 23  백화점_수                   2472 non-null   int64  \n",
-      " 24  숙박_시설_수                 2472 non-null   int64  \n",
-      " 25  area                    2472 non-null   int64  \n",
-      " 26  연령대_10_생활인구_수           2472 non-null   int64  \n",
-      " 27  연령대_20_생활인구_수           2472 non-null   int64  \n",
-      " 28  연령대_30_생활인구_수           2472 non-null   int64  \n",
-      " 29  연령대_40_생활인구_수           2472 non-null   int64  \n",
-      " 30  연령대_50_생활인구_수           2472 non-null   int64  \n",
-      " 31  연령대_60_이상_생활인구_수        2472 non-null   int64  \n",
-      " 32  배후지_아파트_단지_수            2472 non-null   float64\n",
-      " 33  배후지_아파트_가격_1_억_미만_세대_수  2472 non-null   float64\n",
-      " 34  배후지_아파트_가격_1_억_세대_수     2472 non-null   float64\n",
-      " 35  배후지_아파트_가격_2_억_세대_수     2472 non-null   float64\n",
-      " 36  배후지_아파트_가격_3_억_세대_수     2472 non-null   float64\n",
-      " 37  배후지_아파트_가격_4_억_세대_수     2472 non-null   float64\n",
-      " 38  배후지_아파트_가격_5_억_세대_수     2472 non-null   float64\n",
-      " 39  배후지_아파트_가격_6_억_이상_세대_수  2472 non-null   float64\n",
-      " 40  시간대_버스_승하차승객수           2472 non-null   int64  \n",
-      " 41  시간대_지하철_승하차승객수          2472 non-null   int64  \n",
-      " 42  버스정류장_수                 2472 non-null   int64  \n",
-      " 43  지하철역_수                  2472 non-null   int64  \n",
-      " 44  평일_생활인구_평균              2472 non-null   float64\n",
-      " 45  주말_생활인구_평균              2472 non-null   float64\n",
-      " 46  상권내_총_아파트_세대_수          2472 non-null   int64  \n",
-      "dtypes: float64(11), int64(34), object(2)\n",
-      "memory usage: 907.8+ KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>매출</th>\n",
+       "      <th>기준_년_코드</th>\n",
+       "      <th>상권_구분_코드_명</th>\n",
+       "      <th>상권_코드</th>\n",
+       "      <th>상권_코드_명</th>\n",
+       "      <th>점포수</th>\n",
+       "      <th>시간대1</th>\n",
+       "      <th>시간대2</th>\n",
+       "      <th>시간대3</th>\n",
+       "      <th>시간대4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>배후지_아파트_가격_4_억_세대_수</th>\n",
+       "      <th>배후지_아파트_가격_5_억_세대_수</th>\n",
+       "      <th>배후지_아파트_가격_6_억_이상_세대_수</th>\n",
+       "      <th>시간대_버스_승하차승객수</th>\n",
+       "      <th>시간대_지하철_승하차승객수</th>\n",
+       "      <th>버스정류장_수</th>\n",
+       "      <th>지하철역_수</th>\n",
+       "      <th>평일_생활인구_평균</th>\n",
+       "      <th>주말_생활인구_평균</th>\n",
+       "      <th>상권내_총_아파트_세대_수</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>125163.15020</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>골목상권</td>\n",
+       "      <td>2110949</td>\n",
+       "      <td>한남IC</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>149.092500</td>\n",
+       "      <td>99.832500</td>\n",
+       "      <td>1085.562500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59187.6</td>\n",
+       "      <td>50294.0</td>\n",
+       "      <td>112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>94688.22344</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>골목상권</td>\n",
+       "      <td>2110951</td>\n",
+       "      <td>신사은행나무공원</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>149.132955</td>\n",
+       "      <td>99.856597</td>\n",
+       "      <td>1085.263984</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>88341.2</td>\n",
+       "      <td>70153.0</td>\n",
+       "      <td>161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>177736.46150</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>골목상권</td>\n",
+       "      <td>2110952</td>\n",
+       "      <td>논현목련공원</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>149.161344</td>\n",
+       "      <td>99.869870</td>\n",
+       "      <td>1085.670761</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33995.8</td>\n",
+       "      <td>32963.0</td>\n",
+       "      <td>257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>34587.75458</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>골목상권</td>\n",
+       "      <td>2110954</td>\n",
+       "      <td>국기원</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>149.160578</td>\n",
+       "      <td>99.877316</td>\n",
+       "      <td>1086.065624</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>78936.8</td>\n",
+       "      <td>72891.0</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>221061.48320</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>골목상권</td>\n",
+       "      <td>2110955</td>\n",
+       "      <td>논현초등학교</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>149.202311</td>\n",
+       "      <td>99.898098</td>\n",
+       "      <td>1086.489818</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>412995.0</td>\n",
+       "      <td>387342.5</td>\n",
+       "      <td>1958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2467</th>\n",
+       "      <td>118941.35870</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>골목상권</td>\n",
+       "      <td>2110958</td>\n",
+       "      <td>역삼역 4번</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>149.700920</td>\n",
+       "      <td>99.421599</td>\n",
+       "      <td>1092.132824</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>67479.0</td>\n",
+       "      <td>42078.0</td>\n",
+       "      <td>280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2468</th>\n",
+       "      <td>214056.82610</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>골목상권</td>\n",
+       "      <td>2110976</td>\n",
+       "      <td>언북초등학교</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>149.719407</td>\n",
+       "      <td>99.441591</td>\n",
+       "      <td>1092.525272</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108094.2</td>\n",
+       "      <td>102850.5</td>\n",
+       "      <td>528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2469</th>\n",
+       "      <td>340072.11410</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>골목상권</td>\n",
+       "      <td>2110961</td>\n",
+       "      <td>언주역 3번</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>149.646478</td>\n",
+       "      <td>99.421948</td>\n",
+       "      <td>1092.285598</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>155586.2</td>\n",
+       "      <td>118025.5</td>\n",
+       "      <td>684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2470</th>\n",
+       "      <td>533322.40060</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>골목상권</td>\n",
+       "      <td>2110971</td>\n",
+       "      <td>선정릉역 4번</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>149.654021</td>\n",
+       "      <td>99.421714</td>\n",
+       "      <td>1092.261037</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>99555.0</td>\n",
+       "      <td>81935.5</td>\n",
+       "      <td>1728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2471</th>\n",
+       "      <td>201683.59780</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>골목상권</td>\n",
+       "      <td>2110994</td>\n",
+       "      <td>개포고등학교</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>149.600483</td>\n",
+       "      <td>99.400849</td>\n",
+       "      <td>1092.422955</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>64785.6</td>\n",
+       "      <td>59237.5</td>\n",
+       "      <td>360</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2472 rows × 47 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                매출  기준_년_코드 상권_구분_코드_명    상권_코드   상권_코드_명  점포수  시간대1  시간대2  \\\n",
+       "0     125163.15020     2020       골목상권  2110949      한남IC    6     1     0   \n",
+       "1      94688.22344     2020       골목상권  2110951  신사은행나무공원    3     1     0   \n",
+       "2     177736.46150     2020       골목상권  2110952    논현목련공원    3     1     0   \n",
+       "3      34587.75458     2020       골목상권  2110954       국기원    3     1     0   \n",
+       "4     221061.48320     2020       골목상권  2110955    논현초등학교   30     1     0   \n",
+       "...            ...      ...        ...      ...       ...  ...   ...   ...   \n",
+       "2467  118941.35870     2022       골목상권  2110958    역삼역 4번    3     0     0   \n",
+       "2468  214056.82610     2022       골목상권  2110976    언북초등학교    3     0     0   \n",
+       "2469  340072.11410     2022       골목상권  2110961    언주역 3번    4     0     0   \n",
+       "2470  533322.40060     2022       골목상권  2110971   선정릉역 4번    7     0     0   \n",
+       "2471  201683.59780     2022       골목상권  2110994    개포고등학교    3     0     0   \n",
+       "\n",
+       "      시간대3  시간대4  ...  배후지_아파트_가격_4_억_세대_수  배후지_아파트_가격_5_억_세대_수  \\\n",
+       "0        0     0  ...           149.092500            99.832500   \n",
+       "1        0     0  ...           149.132955            99.856597   \n",
+       "2        0     0  ...           149.161344            99.869870   \n",
+       "3        0     0  ...           149.160578            99.877316   \n",
+       "4        0     0  ...           149.202311            99.898098   \n",
+       "...    ...   ...  ...                  ...                  ...   \n",
+       "2467     0     0  ...           149.700920            99.421599   \n",
+       "2468     0     0  ...           149.719407            99.441591   \n",
+       "2469     0     0  ...           149.646478            99.421948   \n",
+       "2470     0     0  ...           149.654021            99.421714   \n",
+       "2471     0     0  ...           149.600483            99.400849   \n",
+       "\n",
+       "      배후지_아파트_가격_6_억_이상_세대_수  시간대_버스_승하차승객수  시간대_지하철_승하차승객수  버스정류장_수  지하철역_수  \\\n",
+       "0                1085.562500              0               0        0       0   \n",
+       "1                1085.263984              0               0        0       0   \n",
+       "2                1085.670761              0               0        0       0   \n",
+       "3                1086.065624              0               0        0       0   \n",
+       "4                1086.489818              0               0        0       0   \n",
+       "...                      ...            ...             ...      ...     ...   \n",
+       "2467             1092.132824              0               0        0       0   \n",
+       "2468             1092.525272              0               0        0       0   \n",
+       "2469             1092.285598              0               0        0       0   \n",
+       "2470             1092.261037              0               0        0       0   \n",
+       "2471             1092.422955              0               0        0       0   \n",
+       "\n",
+       "      평일_생활인구_평균  주말_생활인구_평균  상권내_총_아파트_세대_수  \n",
+       "0        59187.6     50294.0             112  \n",
+       "1        88341.2     70153.0             161  \n",
+       "2        33995.8     32963.0             257  \n",
+       "3        78936.8     72891.0              34  \n",
+       "4       412995.0    387342.5            1958  \n",
+       "...          ...         ...             ...  \n",
+       "2467     67479.0     42078.0             280  \n",
+       "2468    108094.2    102850.5             528  \n",
+       "2469    155586.2    118025.5             684  \n",
+       "2470     99555.0     81935.5            1728  \n",
+       "2471     64785.6     59237.5             360  \n",
+       "\n",
+       "[2472 rows x 47 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -294,7 +608,7 @@
     "                              '아파트_가격_2_억_세대_수', '아파트_가격_3_억_세대_수', \n",
     "                              '아파트_가격_4_억_세대_수', '아파트_가격_5_억_세대_수', \n",
     "                              '아파트_가격_6_억_이상_세대_수'])\n",
-    "data1.info()"
+    "data1"
    ]
   },
   {
