geo_edu_231014_temp

--- a/프로젝트 2/Geo_edu(coordinate).ipynb
+++ b/프로젝트 2/Geo_edu(coordinate).ipynb
@@ -14,9 +14,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6c0fe845-ecfb-4718-bfaa-a8cb07a3c0f0",
+   "metadata": {},
+   "source": [
+    "## 예시 데이터 프레임 만들기 그냥 강남구청 근처 반경 1km로 예시"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7e1e9a60-28a1-44e0-8d44-bf34fb751d56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>건물 종류</th>\n",
+       "      <th>거주 인구</th>\n",
+       "      <th>X_좌표</th>\n",
+       "      <th>Y_좌표</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>빌라</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>빌라</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>빌라</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>빌라</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>빌라</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>빌라</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>빌라</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>빌라</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>빌라</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>빌라</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  건물 종류  거주 인구 X_좌표 Y_좌표\n",
+       "0    빌라     20    1    2\n",
+       "1    빌라     20    1    2\n",
+       "2    빌라     20    1    2\n",
+       "3    빌라     20    1    2\n",
+       "4    빌라     20    1    2\n",
+       "5    빌라     20    1    2\n",
+       "6    빌라     20    1    2\n",
+       "7    빌라     20    1    2\n",
+       "8    빌라     20    1    2\n",
+       "9    빌라     20    1    2"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 실제 x,y 좌표는 가져왔지만 그 외 데이터는 그냥 완전 랜덤.\n",
+    "import pandas as pd\n",
+    "data = [['빌라', 20, '1','2'],\n",
+    "        ['빌라', 20, '1','2'],\n",
+    "        ['빌라', 20, '1','2'],\n",
+    "        ['빌라', 20, '1','2'],\n",
+    "        ['빌라', 20, '1','2'],\n",
+    "        ['빌라', 20, '1','2'],\n",
+    "        ['빌라', 20, '1','2'],\n",
+    "        ['빌라', 20, '1','2'],\n",
+    "        ['빌라', 20, '1','2'],\n",
+    "        ['빌라', 20, '1','2']]\n",
+    "\n",
+    "df = pd.DataFrame(data, columns=['건물 종류', '거주 인구', 'X_좌표', 'Y_좌표'])\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e1e9a60-28a1-44e0-8d44-bf34fb751d56",
+   "id": "5d973e67-a255-44fe-b202-88ab42d52112",
    "metadata": {},
    "outputs": [],
    "source": []
