--- a/프로젝트 2/Folium_Prac.ipynb
+++ b/프로젝트 2/Folium_Prac.ipynb
@@ -4708,7 +4708,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "c426c82b-87bc-4849-9910-4e41fd324b6d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -7941,25 +7943,6 @@
     "    # 지도를 저장하거나 출력\n",
     "    m.save(f'map_with_circle_{center[0]}_{center[1]}.html')\n",
     "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "4fa8fae9-fbb6-40e3-b501-2433a15a7906",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (456486614.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[18], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    pip3 download numpy\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip3 download numpy"
    ]
   },
   {
