--- a/프로젝트 2/동별_최종 변수 산출.ver2.ipynb
+++ b/프로젝트 2/동별_최종 변수 산출.ver2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 1,
    "id": "e8ad5571-df1c-4a7b-a8a3-556ccc3dcc8d",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,8 @@
     "import statsmodels.api as sm\n",
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "import warnings\n",
+    "import numpy as np\n",
+    "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "pd.set_option('display.max_rows', None)\n",
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 2,
    "id": "27668826-bd2c-4aae-9062-b4ddbe31b292",
    "metadata": {},
    "outputs": [
@@ -437,13 +439,13 @@
        "4     1.0  26664.000000   26664.000000  0.999962  "
       ]
      },
-     "execution_count": 177,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('for_PCA_dong_ver2.csv')\n",
+    "df = pd.read_csv('data/for_PCA_dong_ver2_rec.csv')\n",
     "df['수거함_결핍률'] = 1 - (df['수거함_개수']/df['총_거주인구수'])\n",
     "df.head()\n",
     "# df.columns"
@@ -469,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 3,
    "id": "b27e284c-5d4b-42ec-b560-c63b47226f26",
    "metadata": {},
    "outputs": [
@@ -537,7 +539,7 @@
        "4    주요경제활동인구_생활인구수   2.152316"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 4,
    "id": "c1d72ed0-6022-4643-96ff-e663a4392654",
    "metadata": {},
    "outputs": [
@@ -593,8 +595,8 @@
       "Dep. Variable:                 PET예측량   R-squared:                       0.979\n",
       "Model:                            OLS   Adj. R-squared:                  0.979\n",
       "Method:                 Least Squares   F-statistic:                     1276.\n",
-      "Date:                Wed, 25 Oct 2023   Prob (F-statistic):           4.62e-68\n",
-      "Time:                        16:44:23   Log-Likelihood:                -273.21\n",
+      "Date:                Sat, 28 Oct 2023   Prob (F-statistic):           4.62e-68\n",
+      "Time:                        00:31:25   Log-Likelihood:                -273.21\n",
       "No. Observations:                  85   AIC:                             554.4\n",
       "Df Residuals:                      81   BIC:                             564.2\n",
       "Df Model:                           3                                         \n",
@@ -680,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 5,
    "id": "e018804e-151d-4f13-8561-4498fbb90ab1",
    "metadata": {},
    "outputs": [],
@@ -690,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 24,
    "id": "f8a4f94f-b054-4cbd-90c7-bdf2ace8a7d3",
    "metadata": {},
    "outputs": [
@@ -699,14 +701,13 @@
      "output_type": "stream",
      "text": [
       "## 개별 주성분의 설명 분산 비율:\n",
-      " [0.51588353 0.329673   0.13556851 0.01887496]\n",
+      " [0.45077724 0.41387217 0.13535058]\n",
       "## 누적 분산 비율:\n",
-      " [0.51588353 0.84555653 0.98112504 1.        ] \n",
+      " [0.45077724 0.86464942 1.        ] \n",
       "\n",
-      "주성분 1: [0.45799349 0.60474072 0.49818966 0.41992581] (Explained Variance: 0.52)\n",
-      "주성분 2: [-0.71247587 -0.05224458  0.14062013  0.68547401] (Explained Variance: 0.33)\n",
-      "주성분 3: [-0.12663909 -0.37521307  0.85473497 -0.33556792] (Explained Variance: 0.14)\n",
-      "주성분 4: [ 0.51631642 -0.70055287 -0.03822523  0.4911027 ] (Explained Variance: 0.02)\n"
+      "주성분 1: [0.18192496 0.69455688 0.69605607] (Explained Variance: 0.45)\n",
+      "주성분 2: [ 0.88015491  0.20060505 -0.430215  ] (Explained Variance: 0.41)\n",
+      "주성분 3: [-0.43844115  0.69090401 -0.57482259] (Explained Variance: 0.14)\n"
      ]
     }
    ],
@@ -715,7 +716,7 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "for_pca = ['1인가구_비율', '연령대_2030_거주인구수_합', '주요경제활동인구_생활인구수', '수거함개수_당_거주인구수']\n",
+    "for_pca = ['1인가구_비율', '주요경제활동인구_생활인구수', '수거함개수_당_거주인구수']\n",
     "pre_pca = df[for_pca]\n",
     "\n",
     "# 스케일링\n",
@@ -772,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 22,
    "id": "ce534015-f0bd-4e58-83ff-a535f9edc184",
    "metadata": {},
    "outputs": [
@@ -883,7 +884,7 @@
        "55       0.574032  1.16  "
       ]
      },
-     "execution_count": 182,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 23,
    "id": "a9c29c62-9574-4527-ad4d-f8c9663dec82",
    "metadata": {},
    "outputs": [
@@ -1014,7 +1015,7 @@
        "55       0.574032  1.02  "
       ]
      },
-     "execution_count": 175,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,13 +1035,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 9,
    "id": "8e322c36-5e25-49d4-ae4e-1b5fc0465819",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('행정동_지표포함.csv', encoding = 'utf-8-sig', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "df93eb44-2b22-4654-8ea3-e2876c84ccd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df['행정동_코드'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d916585c-0e07-4f4f-8f00-834d6ceb2306",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
