--- a/프로젝트 3/PORTMIS전처리_울산.ipynb
+++ b/프로젝트 3/PORTMIS전처리_울산.ipynb
@@ -3101,6 +3101,7 @@
    "execution_count": 46,
    "id": "f8b25c0d-a4e7-436d-b8ff-471941c3f249",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
