Final_modeling(predict&visualize)

--- a/프로젝트 2/다중회귀_baseline_응용1.ipynb
+++ b/프로젝트 2/다중회귀_baseline_응용1.ipynb
@@ -2090,7 +2090,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "ea4017fd-25ef-471c-a211-46e2339f6fd5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
